<resources>
    <string name="app_name">MovieDB</string>
    <string name="movie_poster_description">Movie Poster</string>
    <string name="menu_popular">Popular</string>
    <string name="menu_top_rated">Top Rated</string>
    <string name="menu_upcoming">Upcoming</string>
    <string name="menu_now_playing">Now Playing</string>
    <string name="movie_backdrop_image">Movie Backdrop Image</string>
    <string name="details_launch_date">Launch Date</string>
    <string name="details_movie_overview">Movie Overview</string>
    <string name="menu_search_a_movie">Search a Movie</string>
    <string name="button_minus">-</string>
    <string name="button_add">+</string>
    <string name="details_genre_label">Genres</string>
    <string name="details_movie_videos">Videos</string>
    <string name="details_movie_reviews">Reviews</string>
    <string name="review_list_up_bar">Review List up bar</string>
    <string name="details_label_bar">Details Label Bar</string>
    <string name="video_thumbnail">Video Thumbnail</string>
    <string name="menu_clear_movies_cache">Clear Movies Cache</string>
    <string name="menu_favorites">Favorites</string>

    <!--Strings dos Generos-->

</resources>
