<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/sv_search_movie"
        android:icon="@drawable/baseline_search_white_36"
        android:title="@string/menu_search_a_movie"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_popular"
        android:orderInCategory="1"
        android:title="@string/menu_popular" />

    <item
        android:id="@+id/action_top_rated"
        android:orderInCategory="2"
        android:title="@string/menu_top_rated" />

    <item
        android:id="@+id/action_upcoming"
        android:orderInCategory="3"
        android:title="@string/menu_upcoming" />

    <item
        android:id="@+id/action_now_playing"
        android:orderInCategory="4"
        android:title="@string/menu_now_playing" />

    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="4"
        android:title="@string/menu_favorites" />

    <item
        android:id="@+id/action_empty_cache"
        android:orderInCategory="4"
        android:title="@string/menu_clear_movies_cache" />

</menu>